--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 
 ###> symfony/framework-bundle ###
+/.env/
+/.env.*/
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -8,3 +10,13 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+/.phpunit.cache/
+###< phpunit/phpunit ###
+
+###> symfony/asset-mapper ###
+/public/assets/
+/assets/vendor/
+###< symfony/asset-mapper ###
