--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=c8ece575fd21b50fe7c96217df3d195d
-DATABASE_URL="mysql://root:root@127.0.0.1:3306/projet_1er_symfony?serverVersion=8.0"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/projet_1er_symfony?serverVersion=8.0"
+
 
 ###< symfony/framework-bundle ###
 
