added forgot password using email

--- a/.env
+++ b/.env
@@ -39,6 +39,6 @@ JWT_SECRET=2801bdd19fdcc77f9f1a50cae6b1b596d0eaf4811acb4bd6901be828
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-MAILER_DSN=null://null
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAILER_DSN=gmail+smtp://YOUR_GMAIL@gmail.com:YOUR_APP_PASSWORD@default
 ###< symfony/mailer ###
