--- a/.env
+++ b/.env
@@ -20,7 +20,8 @@ APP_SECRET=c8ece575fd21b50fe7c96217df3d195d
 DATABASE_URL="mysql://root:root@127.0.0.1:3306/projet_1er_symfony?serverVersion=8.0"
 JWT_SECRET=2801bdd19fdcc77f9f1a50cae6b1b596d0eaf4811acb4bd6901be828
 ###< symfony/framework-bundle ###
-
+ADMIN_USERNAME=45645645
+ADMIN_PASSWORD=admin
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
