--- a/.env
+++ b/.env
@@ -19,6 +19,21 @@ APP_ENV=dev
 APP_SECRET=c8ece575fd21b50fe7c96217df3d195d
 DATABASE_URL="mysql://root:@127.0.0.1:3306/projet_1er_symfony?serverVersion=8.0"
 JWT_SECRET=2801bdd19fdcc77f9f1a50cae6b1b596d0eaf4811acb4bd6901be828
+
+
+
+# ADMIN ACCOUNT
+ADMIN_CIN=45645645
+ADMIN_NAME=Admin
+ADMIN_LASTNAME=User
+ADMIN_ROLE=admin
+ADMIN_EMAIL=admin@medgestion.tn
+ADMIN_TEL=00000000
+ADMIN_SEXE=M
+ADMIN_DATE_NAISSANCE=1980-01-01
+ADMIN_PASSWORD=admin
+
+
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
