--- a/.env
+++ b/.env
@@ -52,5 +52,5 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 # Looking to send emails in production? Check out our Email API/SMTP product!
-MAILER_DSN=gmail+smtp://YOUR_GMAIL@gmail.com:YOUR_APP_PASSWORD@default
+MAILER_DSN=gmail+smtp://louay.tarchoun@sesame.com.tn:nbqdwtdngqmoemum@default
 ###< symfony/mailer ###
